Use IntelliSense improvements

--- a/Silver/Properties/launchSettings.json
+++ b/Silver/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Silver": {
-      "commandName": "Project",
-      "commandLineArgs": "dsfsadfasdf\r\nasdfasdf"
+      "commandName": "Project"
     }
   }
 }
